GIA-3171 - Initial LazyLoad related functions for dynamic iFrame loading - this is essentially a source swapwhere the attributes src or srcdoc (whichever is being used) values are stored at load time in a data attribute of the iframe element before being emptied to prevent loading and then when the user scrolls into the 'range' (the viewport size x3) of the iframe(s) the values are swapped back from the data attibute along with a debounce on the window.scroll event which prevents the event firing to often - there is overhead with the initial swap which almost counters the lazyload benefits and this would preferably be done native side, however this is the first experiment with the idea

--- a/ArticleTemplates/assets/scss/modules/_loading.scss
+++ b/ArticleTemplates/assets/scss/modules/_loading.scss
@@ -3,6 +3,14 @@
 title: Loading
 name: loading
 category: Modules
+
+
+
+
+
+
+
+
 ---
 Display loading animation to provide feedback to the user.
 
@@ -28,5 +36,20 @@ Display loading animation to provide feedback to the user.
 
     &.loading--visible {
         display: block;
+    }
+}
+
+.loader {
+   /* background: url('../img/loading.gif') center center 48px 48px no-repeat;*/
+    background-image:url('../img/loading.gif');
+    background-position: center center;
+    background-size: 48px 48px;
+    background-repeat: no-repeat;
+    /*background-color: #FFF !important;*/
+    min-height: 100px;
+    iframe {
+        font: 0/0 a;
+        text-shadow: none;
+        color: transparent;
     }
 }
