--- a/ArticleTemplates/assets/css/style-async.css
+++ b/ArticleTemplates/assets/css/style-async.css
@@ -2193,9 +2193,20 @@ Default styling no JavaScript enhancement:
   font-weight: 500; }
 
 .element-rich-link, .element-membership {
-  border-top: 1px dotted #bdbdbd;
-  border-bottom: 1px dotted #bdbdbd;
-  margin-bottom: 8px;
+  /* border-top: 1px dotted color(neutral-3);
+   border-bottom: 1px dotted color(neutral-3);
+   margin-bottom: $gs-baseline / 1.5;
+   float: left;
+   clear: left;
+   width: 13.75rem; */
+  color: #333;
+  background-color: #f6f6f6;
+  border-top: 1px solid #4bc6df;
+  border-bottom: 1px solid #dcdad5;
+  display: block;
+  position: relative;
+  -webkit-transition: all .15s ease-out;
+  transition: all .15s ease-out;
   float: left;
   clear: left;
   width: 13.75rem;
