--- a/ArticleTemplates/assets/scss/modules/content/_flyers.scss
+++ b/ArticleTemplates/assets/scss/modules/content/_flyers.scss
@@ -31,11 +31,22 @@ Default styling no JavaScript enhancement:
 }
 
 .element-rich-link, .element-membership {
-    border-top: 1px dotted color(neutral-3);
+   /* border-top: 1px dotted color(neutral-3);
     border-bottom: 1px dotted color(neutral-3);
     margin-bottom: $gs-baseline / 1.5;
     float: left;
     clear: left;
+    width: 13.75rem; */
+    color: color(shade-1);
+    background-color: color(shade-8);
+    border-top: 1px solid color(tone-news-accent);
+    border-bottom: 1px solid color(shade-4);
+    display: block;
+    position: relative;
+    -webkit-transition: all .15s ease-out;
+    transition: all .15s ease-out;
+    float: left;
+    clear:left;
     width: 13.75rem;
     margin: $gs-baseline / 3 $gs-gutter $gs-baseline / 2 0;
     @include mq(mobileLandscape) {
