--- a/ArticleTemplates/assets/scss/modules/content/_flyers.scss
+++ b/ArticleTemplates/assets/scss/modules/content/_flyers.scss
@@ -37,17 +37,13 @@ Default styling no JavaScript enhancement:
     float: left;
     clear: left;
     width: 13.75rem; */
-    color: color(shade-1);
-    background-color: color(shade-8);
-    border-top: 1px solid color(tone-news-accent);
-    border-bottom: 1px solid color(shade-4);
     display: block;
     position: relative;
     -webkit-transition: all .15s ease-out;
     transition: all .15s ease-out;
     float: left;
     clear:left;
-    width: 13.75rem;
+    width: 14.75rem;
     margin: $gs-baseline / 3 $gs-gutter $gs-baseline / 2 0;
     @include mq(mobileLandscape) {
         width: $gs-span;
@@ -57,24 +53,109 @@ Default styling no JavaScript enhancement:
         width: $gs-span-wide;
         margin: $gs-baseline / 3 $gs-gutter $gs-baseline / 2 0;
     }
+    
+    & img{
+	    width: 100%;
+	    height: auto;
+    }
+    
+    & a{
+	text-shadow: none !important;  
+	margin: 0 0 25px 0; 
+    }
+     
+    &.tone-news{
+	color: color(shade-1);
+    background-color: color(shade-8);
+    border-top: 1px solid color(tone-news-accent);
+    border-bottom: 1px solid color(shade-4);
+    
+    & a{
+	color: color(shade-1);
+    }
+    
+    &:after{
+	    content:"";
+	    color: color(tone-news);
+		font-family: 'Guardian Icons';
+		padding: 0 0 0 5px;
+    }
+    
+    &:hover:after{
+	    content: "";
+    }
+    }
+    
+  	  
+	  &.tone-comment{
+    background-color: color(tone-comment-bg);
+    border-top: 1px solid color(tone-comment-accent);
+    border-bottom: 1px solid color(shade-4);
+   
+	& a{
+	color: color(tone-comment-text);
+    }
+    
+    & a:before{
+	    content: " ";
+		font-family: 'Guardian Icons';
+		color: color(tone-comment);
+		font-size: 1.9rem;
+    }
+    
+    &:after{
+	    content:"";
+	    color: color(tone-comment);
+		font-family: 'Guardian Icons';
+		padding: 0 0 0 5px;
+    }
+    
+    &:hover:after{
+	    content: "";
+    }
+    }
+    
+    &.tone-feature{
+    background-color: color(tone-feature1);
+    border-top: 1px solid color(tone-feature1-accent);
+    border-bottom: 1px solid color(shade-4);
+    
+    & a{
+	color: color(shade-7);
+    }
+    
+    &:after{
+	    content:"";
+	    color: color(shade-7);
+		font-family: 'Guardian Icons';
+		padding: 0 0 0 5px;
+    }
+    
+    &:hover:after{
+	    content: "";
+    }
+    }
+    
+    /*&:before{
+		content: 'More on this topic';
+		@extend %flyer-header;   
+    }*/
 
     p {
-        margin: 12px 0px;
+        margin: 0px 0px !important;
+        padding: 0 5px 0 5px;
+        line-height: 18px;
     }
 
     a {
         font-size: $fs-main-link;
         font-family: $egyptian-display;
-        font-weight: 600;
+        font-weight: 500;
         display: block;
         padding: 0;
-        color: color(neutral-1) !important;
         border: 0;
         background-image: none !important;
         
-        &:hover {
-            text-decoration: underline !important;
-        }
     }
 }
 
@@ -89,8 +170,8 @@ Default styling no JavaScript enhancement:
         display: none;
     }
 
-    a:before {
+   /* a:before {
         content: 'More on this topic';
         @extend %flyer-header;
-    }    
+    }    */
 }
