--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -6669,7 +6669,7 @@
       display: block !important; }
   #sandbox .android .container--related {
     margin-bottom: 48px; }
-  #sandbox .element-membership span, #sandbox .element-rich-link a:before {
+  #sandbox .element-membership span {
     display: block;
     font-size: 1.5rem;
     font-family: "Guardian Egyptian Web", Georgia, serif;
@@ -6683,18 +6683,18 @@
      float: left;
      clear: left;
      width: 13.75rem; */
-    color: #333;
-    background-color: #f6f6f6;
-    border-top: 1px solid #4bc6df;
-    border-bottom: 1px solid #dcdad5;
     display: block;
     position: relative;
     -webkit-transition: all .15s ease-out;
     transition: all .15s ease-out;
     float: left;
     clear: left;
-    width: 13.75rem;
-    margin: 4px 20px 6px 0; }
+    width: 14.75rem;
+    margin: 4px 20px 6px 0;
+    /*&:before{
+		content: 'More on this topic';
+		@extend %flyer-header;   
+    }*/ }
     @media all and (min-width: 30em) {
       #sandbox .element-rich-link, #sandbox .element-membership {
         width: 24.75rem;
@@ -6703,23 +6703,76 @@
       #sandbox .element-rich-link, #sandbox .element-membership {
         width: 30.75rem;
         margin: 4px 20px 6px 0; } }
+    #sandbox .element-rich-link img, #sandbox .element-membership img {
+      width: 100%;
+      height: auto; }
+    #sandbox .element-rich-link a, #sandbox .element-membership a {
+      text-shadow: none !important;
+      margin: 0 0 25px 0; }
+    #sandbox .element-rich-link.tone-news, #sandbox .element-membership.tone-news {
+      color: #333;
+      background-color: #f6f6f6;
+      border-top: 1px solid #4bc6df;
+      border-bottom: 1px solid #dcdad5; }
+      #sandbox .element-rich-link.tone-news a, #sandbox .element-membership.tone-news a {
+        color: #333; }
+      #sandbox .element-rich-link.tone-news:after, #sandbox .element-membership.tone-news:after {
+        content: "";
+        color: #005689;
+        font-family: 'Guardian Icons';
+        padding: 0 0 0 5px; }
+      #sandbox .element-rich-link.tone-news:hover:after, #sandbox .element-membership.tone-news:hover:after {
+        content: ""; }
+    #sandbox .element-rich-link.tone-comment, #sandbox .element-membership.tone-comment {
+      background-color: #e3e1dc;
+      border-top: 1px solid #f39f33;
+      border-bottom: 1px solid #dcdad5; }
+      #sandbox .element-rich-link.tone-comment a, #sandbox .element-membership.tone-comment a {
+        color: #2d2a26; }
+      #sandbox .element-rich-link.tone-comment a:before, #sandbox .element-membership.tone-comment a:before {
+        content: " ";
+        font-family: 'Guardian Icons';
+        color: #e6711b;
+        font-size: 1.9rem; }
+      #sandbox .element-rich-link.tone-comment:after, #sandbox .element-membership.tone-comment:after {
+        content: "";
+        color: #e6711b;
+        font-family: 'Guardian Icons';
+        padding: 0 0 0 5px; }
+      #sandbox .element-rich-link.tone-comment:hover:after, #sandbox .element-membership.tone-comment:hover:after {
+        content: ""; }
+    #sandbox .element-rich-link.tone-feature, #sandbox .element-membership.tone-feature {
+      background-color: #951c55;
+      border-top: 1px solid #b82266;
+      border-bottom: 1px solid #dcdad5; }
+      #sandbox .element-rich-link.tone-feature a, #sandbox .element-membership.tone-feature a {
+        color: #fff; }
+      #sandbox .element-rich-link.tone-feature:after, #sandbox .element-membership.tone-feature:after {
+        content: "";
+        color: #fff;
+        font-family: 'Guardian Icons';
+        padding: 0 0 0 5px; }
+      #sandbox .element-rich-link.tone-feature:hover:after, #sandbox .element-membership.tone-feature:hover:after {
+        content: ""; }
     #sandbox .element-rich-link p, #sandbox .element-membership p {
-      margin: 12px 0px; }
+      margin: 0px 0px !important;
+      padding: 0 5px 0 5px;
+      line-height: 18px; }
     #sandbox .element-rich-link a, #sandbox .element-membership a {
       font-size: 100%;
       font-family: "Guardian Egyptian Web", Georgia, serif;
-      font-weight: 600;
+      font-weight: 500;
       display: block;
       padding: 0;
-      color: #333 !important;
       border: 0;
       background-image: none !important; }
-      #sandbox .element-rich-link a:hover, #sandbox .element-membership a:hover {
-        text-decoration: underline !important; }
-  #sandbox .element-rich-link span {
-    display: none; }
-  #sandbox .element-rich-link a:before {
-    content: 'More on this topic'; }
+  #sandbox .element-rich-link {
+    /* a:before {
+         content: 'More on this topic';
+         @extend %flyer-header;
+     }    */ }
+    #sandbox .element-rich-link span {
+      display: none; }
   @media all and (max-width: 40.615em) {
     #sandbox .prose {
       font-size: 1.6rem;
