Seperated style for rich links to new file card--richlinks

--- a/ArticleTemplates/assets/scss/style-async.scss
+++ b/ArticleTemplates/assets/scss/style-async.scss
@@ -29,6 +29,7 @@
 @import 'modules/containers/_card--deadBlog';
 @import 'modules/containers/_card--review';
 @import 'modules/containers/_card--analysis';
+@import 'modules/containers/_cards-richlinks';
 @import 'modules/containers/_container';
 @import 'modules/content/_flyers';
 @import 'modules/content/_prose';
