--- a/Documentation/assets/css/style.css
+++ b/Documentation/assets/css/style.css
@@ -382,6 +382,9 @@ A standard colour palette used across the Guardian’s digital products.
 .styleguide__color--tone-feature1-accent {
   background: #b82266; }
 
+.styleguide__color--tone-feature1-accent2 {
+  background: #fdadba; }
+
 .styleguide__color--tone-comment {
   background: #e6711b; }
 
@@ -903,6 +906,18 @@ A standard colour palette used across the Guardian’s digital products.
     margin-top: calc(50% - 1.5em); }
   .styleguide__color--tone-feature1-accent:after {
     content: "#b82266"; }
+
+.styleguide__color--tone-feature1-accent2:before, .styleguide__color--tone-feature1-accent2:after {
+  font-size: 75%;
+  line-height: 1;
+  width: 90%;
+  display: inline-block; }
+.styleguide__color--tone-feature1-accent2:before {
+  content: "tone-feature1-accent2";
+  font-weight: bold;
+  margin-top: calc(50% - 1.5em); }
+.styleguide__color--tone-feature1-accent2:after {
+  content: "#fdadba"; }
 
 .styleguide__color--tone-comment {
   text-shadow: 0 0 1px #000;
