Added support for bylines

--- a/ArticleTemplates/assets/css/style.css
+++ b/ArticleTemplates/assets/css/style.css
@@ -5900,12 +5900,25 @@ Display a comment article card.
     height: auto; }
   .element-rich-link a, .element-membership a {
     text-shadow: none !important;
-    margin: 0 0 25px 0; }
+    margin: 0 0 0 0; }
+  .element-rich-link .rich-link-content, .element-membership .rich-link-content {
+    margin: 0 0 15px 0; }
   .element-rich-link.tone-news, .element-membership.tone-news {
     color: #333;
     background-color: #f6f6f6;
     border-top: 1px solid #4bc6df;
     border-bottom: 1px solid #dcdad5; }
+    .element-rich-link.tone-news.has-quote a:before, .element-membership.tone-news.has-quote a:before {
+      content: " ";
+      font-family: 'Guardian Icons';
+      color: #005689;
+      font-size: 1.9rem; }
+    .element-rich-link.tone-news .rich-link-byline, .element-membership.tone-news .rich-link-byline {
+      color: #005689;
+      font-weight: 600;
+      display: none; }
+    .element-rich-link.tone-news.has-byline .rich-link-byline, .element-membership.tone-news.has-byline .rich-link-byline {
+      display: block; }
     .element-rich-link.tone-news a, .element-membership.tone-news a {
       color: #333; }
     .element-rich-link.tone-news:after, .element-membership.tone-news:after {
@@ -5921,6 +5934,12 @@ Display a comment article card.
     border-bottom: 1px solid #dcdad5; }
     .element-rich-link.tone-comment a, .element-membership.tone-comment a {
       color: #2d2a26; }
+    .element-rich-link.tone-comment .rich-link-byline, .element-membership.tone-comment .rich-link-byline {
+      color: #e6711b;
+      font-weight: 600;
+      display: none; }
+    .element-rich-link.tone-comment.has-byline .rich-link-byline, .element-membership.tone-comment.has-byline .rich-link-byline {
+      display: block; }
     .element-rich-link.tone-comment a:before, .element-membership.tone-comment a:before {
       content: " ";
       font-family: 'Guardian Icons';
@@ -5935,16 +5954,51 @@ Display a comment article card.
       content: ""; }
   .element-rich-link.tone-feature, .element-membership.tone-feature {
     background-color: #951c55;
-    border-top: 1px solid #b82266;
+    border-top: 1px solid #fdadba;
     border-bottom: 1px solid #dcdad5; }
+    .element-rich-link.tone-feature.has-quote a:before, .element-membership.tone-feature.has-quote a:before {
+      content: " ";
+      font-family: 'Guardian Icons';
+      color: #fdadba;
+      font-size: 1.9rem; }
+    .element-rich-link.tone-feature .rich-link-byline, .element-membership.tone-feature .rich-link-byline {
+      color: #fdadba;
+      font-weight: 600;
+      display: none; }
+    .element-rich-link.tone-feature.has-byline .rich-link-byline, .element-membership.tone-feature.has-byline .rich-link-byline {
+      display: block; }
     .element-rich-link.tone-feature a, .element-membership.tone-feature a {
       color: #fff; }
     .element-rich-link.tone-feature:after, .element-membership.tone-feature:after {
       content: "";
-      color: #fff;
+      color: #fdadba;
       font-family: 'Guardian Icons';
       padding: 0 0 0 5px; }
     .element-rich-link.tone-feature:hover:after, .element-membership.tone-feature:hover:after {
+      content: ""; }
+  .element-rich-link.tone-media, .element-membership.tone-media {
+    background-color: #333;
+    border-top: 1px solid #fb0;
+    border-bottom: 1px solid #dcdad5; }
+    .element-rich-link.tone-media .rich-link-byline, .element-membership.tone-media .rich-link-byline {
+      color: #fb0;
+      font-weight: 600;
+      display: none; }
+    .element-rich-link.tone-media.has-byline .rich-link-byline, .element-membership.tone-media.has-byline .rich-link-byline {
+      display: block; }
+    .element-rich-link.tone-media.has-quote a:before, .element-membership.tone-media.has-quote a:before {
+      content: " ";
+      font-family: 'Guardian Icons';
+      color: #fb0;
+      font-size: 1.9rem; }
+    .element-rich-link.tone-media a, .element-membership.tone-media a {
+      color: #fff; }
+    .element-rich-link.tone-media:after, .element-membership.tone-media:after {
+      content: "";
+      color: #fb0;
+      font-family: 'Guardian Icons';
+      padding: 0 0 0 5px; }
+    .element-rich-link.tone-media:hover:after, .element-membership.tone-media:hover:after {
       content: ""; }
   .element-rich-link p, .element-membership p {
     margin: 0px 0px !important;
